# NewBing-Web

./: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
api/: cookie.json  pyproject.toml  requirements.txt
api/api/: App.py  Functions.py  requirements.txt
api/api/__pycache__/: Functions.cpython-311.pyc.2647761713968
api/api/assets/: chat-8ba58ce7.js  chat-ab8c5441.js  chat-c46189e5.css  chat-fb215ab5.js  index-1824d277.js  index-4d8c059d.css  index-501317b4.js  index-ffa3771a.js
api/api/templates/: index.html
src/: App.vue  main.ts
src/components/: chat.vue  chat_view.vue  test.json
src/router/: index.ts
