[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["VMTask <congmingfan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
edgegpt = "^0.0.60"
uvicorn = "^0.21.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
